# STM32ProjectTemplate

./: .clang-format  .clang-tidy  .devcontainer.json  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  Makefile.include  Makefile.targets  PreLoad.cmake  README.en.md  README.md  compose.yaml  config.mk  cube_script  docker-compose.yaml  flash.jlink  run.sh  teste.json  uncrustify.cfg
.docker/: .dockerignore  Dockerfile
.docker/scripts/: build.sh  check_format.sh
.githooks/: pre-commit
.github/workflows/: ci.yaml  release.yaml
cmake/: config_validation.cmake  linter.cmake  targets.cmake  utilities.cmake  workspace.cmake
cmake/templates/: helpme.in  jlink.in  launch.json.in  tasks.json.in
config/: target.hpp
cube/: board.ioc  stm32_project_template.ioc  stm32_project_template_v1.ioc
docker/: Dockerfile
inc/: file.h  mcu.h  mcu.hpp  utils.h
include/: gpio.hpp  mcu.hpp
src/: gpio.cpp  main.c  main.cpp  mcu.c  mcu.cpp
tests/inc/: test_core.h  test_core.hpp  tests_core.h
tests/src/: test_core.c  test_core.cpp  test_gpio.cpp  test_main.cpp  tests_core.c  tests_main.cpp
